# demo-rocket-rust

./: Cargo.toml  README.md  rust-project.json
src/: main.rs
src/lib/: common.rs
src/project_a/: mod.rs  routes.rs
src/project_b/: routes.rs
src/project_c/: routes.rs
